src/app.css
@import "tailwindcss";
@import "photoswipe/style.css";

@font-face {
  font-family: "SF Pro";
  src: url(../fonts/SF-Pro.woff2) format("woff2-variations");
  font-weight: 100 900;
  font-style: normal;
}

@font-face {
  font-family: "SF Pro Italic";
  src: url(../fonts/SF-Pro-Italic.woff2) format("woff2-variations");
  font-weight: 100 900;
  font-style: italic;
}

@font-face {
  font-family: "New York";
  src: url(../fonts/NewYork.woff2) format("woff2-variations");
  font-weight: 100 900;
  font-style: normal;
}

@font-face {
  font-family: "New York Italic";
  src: url(../fonts/NewYorkItalic.woff2) format("woff2-variations");
  font-weight: 100 900;
  font-style: italic;
}

:root {
  --blue: #007bff;
  --indigo: #6610f2;
  --purple: #6f42c1;
  --pink: #e83e8c;
  --red: #dc3545;
  --orange: #fd7e14;
  --yellow: #ffc107;
  --green: #28a745;
  --teal: #20c997;
  --cyan: #17a2b8;
  --white: #fff;
  --gray: #6c757d;
  --gray-dark: #343a40;
  --primary: #000;
  --secondary: #6c757d;
  --success: #28a745;
  --info: #17a2b8;
  --warning: #ffc107;
  --danger: #dc3545;
  --light: #f8f9fa;
  --dark: #343a40;
  --breakpoint-xs: 0;
  --breakpoint-sm: 576px;
  --breakpoint-md: 768px;
  --breakpoint-lg: 992px;
  --breakpoint-xl: 1200px;
  --font-family-sans-serif: "" SF Pro "", -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
    "Segoe UI Emoji", "Segoe UI Symbol";
  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
    "Liberation Mono", "Courier New", monospace;
}

*,
:after,
:before {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

html {
  font-family: sans-serif;
  line-height: 1.15;
  scroll-behavior: smooth;
  font-size: 14px;
}

@media (min-width: 992px) {
  html {
    font-size: 18px;
  }
}

body {
  margin: 0;
  font-family: "SF Pro", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
    Helvetica Neue, Arial, sans-serif;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #342616;
  text-align: left;
  background-color: #f9f4f1;
  overflow-x: hidden;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-top: 0;
  margin-bottom: 0.5rem;
}

p {
  margin-top: 0;
  margin-bottom: 1rem;
}

dl,
ol,
ul {
  margin-top: 0;
}

ol ol,
ol ul,
ul ol,
ul ul {
  margin-bottom: 0;
}

b,
strong {
  font-weight: bolder;
}

small {
  font-size: 80%;
}

a {
  color: rgba(45, 45, 45, 0.85);
  text-decoration: none;
  background-color: transparent;
  transition: color 0.3s ease;
}

a:hover {
  color: #342616;
}

a:hover {
  text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-bottom: 0.5rem;
  font-weight: 500;
  line-height: 1.2;
}

h1 {
  font-size: 2.5rem;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.75rem;
}

h4 {
  font-size: 1.5rem;
}

h5 {
  font-size: 1.25rem;
}

h6 {
  font-size: 1rem;
}

.lead {
  font-size: 1.25rem;
  font-weight: 300;
}

.container,
.container-fluid {
  width: 100%;
  padding-right: 1%;
  padding-left: 1%;
  margin-right: auto;
  margin-left: auto;
}

@media (min-width: 576px) {
  .container {
    max-width: 540px;
  }
}

@media (min-width: 768px) {
  .container {
    max-width: 720px;
  }
}

@media (min-width: 992px) {
  .container {
    max-width: 960px;
  }
}

@media (min-width: 1200px) {
  .container {
    max-width: 1140px;
  }
}

body {
  padding-top: 66px;
}

@media (min-width: 768px) {
  body {
    padding-top: 144px;
  }
}

@media (min-width: 992px) {
  body {
    padding-top: 168px;
  }
}

@media (min-width: 1200px) {
  body {
    padding-top: 216px;
  }
}

.wrap {
  min-height: 100vh;
}

.lazyload {
  opacity: 0;
}

.lazyloaded {
  opacity: 1;
}

.sp {
  display: none;
}

.pc {
  display: block;
}

@media screen and (max-width: 767px) {
  .sp {
    display: block;
  }

  .pc {
    display: none;
  }
}

.b-hero {
  display: flex;
  flex: 0 0 100%;
  user-select: none;
  font-size: 30px;
  letter-spacing: 3px;
  font-weight: 500;
  gap: 0.5rem;
}

@media (min-width: 768px) {
  .b-hero {
    font-size: 48px;
    gap: 1rem;
  }
}

@media (min-width: 992px) {
  .b-hero {
    font-size: 56px;
    gap: 1.5rem;
  }
}

@media (min-width: 1200px) {
  .b-hero {
    font-size: 72px;
    gap: 2rem;
  }
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

/*! PhotoSwipe */

.pswp {
  --pswp-bg: #fff;
  --pswp-icon-color: #4f4f4f;
  --pswp-icon-stroke-color: none;
}

.caption-content {
  display: block;
  padding: 18px 25px;
}

.pswp--zoom-allowed .pswp__button--zoom,
.pswp__counter,
.pswp__preloader,
.hidden-caption {
  display: none;
}

.pswp .pswp__button--download-button {
  transform: scale(1.05);
  margin-top: -0.08rem;
}

@media (max-width: 383px) {
  .pswp__button {
    display: none;
  }
}

@media (max-width: 767px) {
  .pswp__button--arrow {
    display: none;
  }
}

